--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,19 @@
             <version>2.15.0</version> <!-- Use the latest version available -->
         </dependency>
 
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.20.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>2.20.0</version>
+            </dependency>
+
+
+
     </dependencies>
 
     <build>
